--- a/src/sidepanel.html
+++ b/src/sidepanel.html
@@ -166,6 +166,12 @@
 		.group-selector-button:hover {
 			border: 1px solid grey;
 		}
+
+		.group-selector-confirm {
+			background-color: #0075FF;
+			color: white;
+			border: 1px solid #0075FF;
+		}
 	</style>
 </head>
 
